SET(CMAKE_MACOSX_RPATH 1)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)

SET(LIB_SRC
    list.c
    list.h)

#SET(LIB_INCLUDE
#    list.h)
#AUX_SOURCE_DIRECTORY(. LIB_SRC)

ADD_LIBRARY(container SHARED ${LIB_SRC})
ADD_LIBRARY(container_static STATIC ${LIB_SRC})
SET_TARGET_PROPERTIES(container_static PROPERTIES OUTPUT_NAME "container")
